<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="_8">8</string>
    <string name="clear">Clear</string>
    <string name="_7">7</string>
    <string name="Devide">/</string>
    <string name="x">x</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="minus">-</string>
    <string name="button_3">3</string>
    <string name="Button_2">2</string>
    <string name="Button_1">1</string>
    <string name="button_result">=</string>
    <string name="button_Dote">.</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_Add">+</string>
    <string name="buttonDevide">/</string>
    <string name="buttonMinus">-</string>
    <string name="buttonAdd">+</string>
</resources>